[tool.poetry]
name = "darkeranalysis"
version = "0.1.0"
description = ""
authors = ["Benedikt Bünz <benedikt@cs.stanford.edu>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
pip = "^21.3.1"
gmpy2 = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
